--- a/src/app/components/pages/learning/stories/brocoli/brocoli.component.html
+++ b/src/app/components/pages/learning/stories/brocoli/brocoli.component.html
@@ -1,30 +1,37 @@
 <div class="background-color"></div>
 
-<div id="section1" class="background"><img src="images/learningZone/stories/banane/background.png" alt="background">
+<div id="section1" class="background"><img src="images/learningZone/stories/brocoli/background.png" alt="background">
 </div>
 
 <div id="section1" class="cover-title">
-    <h3 class="description firstDesc">Moi,&nbsp;&nbsp;&nbsp;&nbsp;c’est</h3>
-    <h1 class="title">La Banane</h1>
-    <h3 class="description">Je ne veux pas finir dans une tarte ! Je veux<br>découvrir le monde !</h3>
+    <h1 class="title">Brocoli !</h1>
+    <h3 class="description">JIl était une fois... un petit légume vert<br>magique, adoré des Romains,Appelé ..</h3>
 
     <button class="btn btn-primary" (click)="discover()" (mouseover)="toggleBox()">Discover</button>
 
     <div *ngIf="showBox" class="cloud1">
-        <img class="" src="images/learningZone/stories/banane/cloud1.png" alt="background">
+        <img class="" src="images/learningZone/stories/brocoli/cloud1.png" alt="background">
     </div>
 </div>
 
 <div *ngIf="showBox" class="content">
 
-
     <div id="section2" #section class="section section2">
-        <img src="images/learningZone/stories/banane/section2.png" alt="section 2">
+        <img src="images/learningZone/stories/brocoli/section2.png" alt="section 2">
         <div class="story">
-            <p>Banana a voyagé partout<br>: l’Asie, l’Afrique, les<br>Antilles, l’Amérique du<br>Sud… jusqu’à chez toi !
+            <p>Petit à petit, le brocoli est<br>devenu un super-héros vert<br>dans toute l’Europe !
             </p>
         </div>
     </div>
+
+        <div id="section3" #section class="section section3">
+        <img src="images/learningZone/stories/brocoli/section3.png" alt="section 3">
+        <!-- <div class="story">
+            <p>Petit à petit, le brocoli est<br>devenu un super-héros vert<br>dans toute l’Europe !
+            </p>
+        </div> -->
+    </div>
+    <!-- 
 
     <div id="section3" #section class="section section3">
         <img src="images/learningZone/stories/banane/section3.png" alt="section 3">
@@ -100,11 +107,9 @@
     </div>
     <div id="section8" #section class="section section8">
         <img src="images/learningZone/stories/banane/section8.png" alt="section 8">
-        <!-- <div class="muscles"> -->
 
             <img class="muscle1" src="images/learningZone/stories/banane/muscle1.png" alt="muscle 1">
             <img class="muscle2" src="images/learningZone/stories/banane/muscle2.png" alt="muscle 2">
-        <!-- </div> -->
         <div class="story">
             <p>"Le potassium<br>protège tes muscles<br>et évite les crampes<br>après le sport !"</p>
         </div>
@@ -133,5 +138,5 @@
     <div #section class="section footer">
 
         <app-home-footer [color]="'#B68455'"></app-home-footer>
-    </div>
+    </div> -->
 </div>
