--- a/src/app/components/pages/learning/stories/tomate-story/tomate-story.component.css
+++ b/src/app/components/pages/learning/stories/tomate-story/tomate-story.component.css
@@ -89,24 +89,16 @@ body {
 }
 
 .cover-title .btn {
+    width: 30%;
+    height: 5%;
     background-color: #81BEAE;
+    color: white;
     border: none;
-    width: 120px;
-    padding: 10px 26px;
-    align-items: center;
-    cursor: pointer;
-    color: #fff;
-    font-weight: bold;
-    border-radius: 14px;
-    box-shadow: 0 4px 16px rgba(129, 190, 174, 0.2);
-    transition:
-        background 0.3s,
-        color 0.3s,
-        border 0.3s,
-        transform 0.2s,
-        box-shadow 0.3s;
-    animation: popupBtn 0.6s ease-out 1s forwards, discover 1s infinite alternate;
     opacity: 0;
+    animation: popupBtn 0.6s ease-out 1s forwards, discover 1s infinite alternate;
+    font-family: var(--mainFont);
+    border-radius: 10px;
+    box-shadow: 0 8px 32px 0 rgba(129, 190, 174, 0.6), 0 4px 12px 0 rgba(0, 0, 0, 0.18);
     border: 2.5px solid #ffffff00;
     outline: 3px solid #48c4a300;
     outline-offset: 0px;
@@ -163,7 +155,7 @@ body {
 .cloud {
     position: absolute;
     left: 0;
-    bottom: -20%;
+    bottom: -15%;
     display: block;
     z-index: 10;
     animation: fadeIn 1s ease-in-out;
@@ -171,6 +163,17 @@ body {
     width: 100%;
     height: auto;
     /* display: none; */
+}
+
+
+
+.cloud img {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    /* left: -176px; */
+    object-fit: cover;
+    display: block;
 }
 
 @keyframes fadeIn {
@@ -183,15 +186,6 @@ body {
         opacity: 1;
         margin-bottom: 0;
     }
-}
-
-.cloud img {
-    /* width: 100%; */
-    height: 100%;
-    position: relative;
-    /* left: -176px; */
-    object-fit: cover;
-    display: block;
 }
 
 .section {
@@ -270,7 +264,7 @@ body {
     background-color: #F5E1A6;
     /* position: absolute; */
     left: 50%;
-    top: 100px;
+    top: 6%;
     transform: translateX(-50%);
     display: flex;
     justify-content: center;
@@ -278,7 +272,7 @@ body {
 
 .story h3 {
     color: #474747;
-    font-size: clamp(1.1rem, 2.5vw, 2rem);
+    font-size: clamp(0.7rem, 2vw, 2rem);
     font-weight: bold;
     font-family: "Baloo 2", sans-serif;
     text-align: center;
@@ -614,7 +608,7 @@ body {
 }
 
 .K1 {
-   top: 48%;
+    top: 48%;
     left: 3%;
     background-color: #E6AD3D;
 }
@@ -630,7 +624,7 @@ body {
 }
 
 .E {
-   top: 68%;
+    top: 68%;
     left: 6%;
     background-color: #3E7E8C;
 }
@@ -683,7 +677,7 @@ body {
         2px -2px 0 #FCEFC5,
         -2px -2px 0 #FCEFC5;
 
-    font-size: clamp(2rem,5vw, 4rem);
+    font-size: clamp(2rem, 5vw, 4rem);
     margin-bottom: 10%;
     text-align: center;
 }
@@ -829,10 +823,14 @@ body {
 @media (max-width: 480px) {}
 
 /* tablet */
-@media (min-width: 481px) and (max-width: 768px) {
+@media (min-width: 481px) and (max-width: 1100px) {
     .cover-title .btn {
         padding: 5px 0px;
 
+    }
+
+    .cloud {
+        bottom: -10%;
     }
 }
 
