--- a/src/app/components/pages/learning/learning.component.html
+++ b/src/app/components/pages/learning/learning.component.html
@@ -11,7 +11,7 @@
             Toma-Tomate !
         </h3>
     </a>
-    <div class="item" >
+    <div class="item" [routerLink]="['/banane-story']">
         <div class="linear-background"></div>
 
         <div class="item-background"></div>
@@ -29,7 +29,7 @@
             Caro-Carotte !
         </h3>
     </div>
-    <div class="item">
+    <div class="item" [routerLink]="['/brocoli-story']">
         <div class="linear-background"></div>
 
         <div class="item-background"></div>
@@ -38,7 +38,7 @@
             Le Brocoli !
         </h3>
     </div>
-    <div class="item">
+    <div class="item" [routerLink]="['/fraise-story']">
         <div class="linear-background"></div>
 
         <div class="item-background"></div>
