--- a/src/app/components/pages/shop/shop.component.html
+++ b/src/app/components/pages/shop/shop.component.html
@@ -1,1 +1,20 @@
-<p>shop works!</p>
+<app-background></app-background>
+
+<div class="background"><img src="images/shopping/background.png" alt="background"></div>
+
+<div class="content">
+    <div class="title">
+        <img class="title-background img-fluid" src="images/shopping/titleBackground.png" alt="title">
+        <img class="title-collectionBackground img-fluid" src="images/shopping/titleBackgroundCollection.png"
+            alt="title">
+        <div class="title-main row">
+
+            <img class="title-character img-fluid col-4" src="images/shopping/mainCharacter.png" alt="title">
+            <div class="title-sentince col-8">
+                <h1>Buy <span>Patarif</span> products to<br>be part of our family</h1>
+                <p>Many great products are waiting for you</p>
+
+            </div>
+        </div>
+    </div>
+</div>
