--- a/src/app/components/account/signup/signup.component.css
+++ b/src/app/components/account/signup/signup.component.css
@@ -1,18 +1,17 @@
 body {
   margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-
+  height: 100vh; 
+  display: flex;
+  justify-content: center;
+  align-items: center; 
 }
 
 .container {
   position: absolute;
-  transform: translate(-50%, -50%);
   top: 50%;
-  left: 50%;
-  /* width: 70%; */
+  left: 50%; 
+  transform: translate(-50%, -50%); 
 }
-
 .logo {
   position: relative;
   transform: translateX(-50%);
