--- a/src/app/components/account/signup/signup.component.html
+++ b/src/app/components/account/signup/signup.component.html
@@ -1,8 +1,8 @@
 <!-- register.component.html -->
 <div class="container">
   <img class="logo" src="images/logo-patarif.png" alt="logo" width="100">
-  <div class="gradient-border-wrapper">
-    <div class="row shadow-lg  overflow-hidden">
+  <div class="gradient-border-wrapper w-100 ">
+    <div class="row shadow-lg  overflow-hidden w-100">
 
       <!-- Left side -->
       <div class="col-md-5 d-flex flex-column justify-content-center align-items-center text-white">
@@ -34,7 +34,12 @@
           </div>
 
 
-          <button type="submit" class="btn-create btn btn-primary w-100">Create Account</button>
+          <button type="submit" class="btn-create btn btn-primary w-100" [disabled]="isLoading">
+            <span *ngIf="!isLoading">Create Account</span>
+            <span *ngIf="isLoading">
+              <i class="fa fa-spinner fa-spin"></i> Processing...
+            </span>
+          </button>
         </form>
         <div class="mt-3 text-center">
           have an account? <a class="text-primary" href="/login">login</a>
@@ -61,18 +66,20 @@
       </div>
 
     </div>
-
-
-<div class="toast-container" *ngIf="submitted && regirster.invalid">
-  <div class="toast" *ngIf="regirster.controls['firstName'].invalid" [attr.data-key]="'firstName-' + submitted">
-    <span class="emoji">🧸</span> Please write your first name (2–20 characters)
-  </div>
-
-  <div class="toast" *ngIf="regirster.controls['email'].invalid" [attr.data-key]="'email-' + submitted">
-    <span class="emoji">📧</span> Email is required and must be valid
-  </div>
-
-  <div class="toast" *ngIf="regirster.controls['password'].invalid" [attr.data-key]="'password-' + submitted">
-    <span class="emoji">🔒</span> Password must be at least 10 characters
   </div>
 </div>
+
+
+    <div class="toast-container" *ngIf="submitted && regirster.invalid">
+      <div class="toast" *ngIf="regirster.controls['firstName'].invalid" [attr.data-key]="'firstName-' + submitted">
+        <span class="emoji">🧸</span> Please write your first name (2–20 characters)
+      </div>
+
+      <div class="toast" *ngIf="regirster.controls['email'].invalid" [attr.data-key]="'email-' + submitted">
+        <span class="emoji">📧</span> Email is required and must be valid
+      </div>
+
+      <div class="toast" *ngIf="regirster.controls['password'].invalid" [attr.data-key]="'password-' + submitted">
+        <span class="emoji">🔒</span> Password must be at least 10 characters
+      </div>
+    </div>
