--- a/src/app/components/pages/home/home-footer/home-footer.component.html
+++ b/src/app/components/pages/home/home-footer/home-footer.component.html
@@ -1,35 +1,34 @@
 <div class="footer-home">
-    <div class="logo-section col-auto d-flex flex-column align-items-center">
-        <a class="logo" href="#top" title="Go to main page up">
+    <!-- Logo Section -->
+    <div class="logo-section">
+        <a class="logo" href="#top" title="Go to main page">
             <img src="images/logo-patarif.png" alt="logo">
         </a>
     </div>
 
-    <div class="links-section col-auto d-flex flex-column align-items-center">
-        <div class="links row gap-3">
-            <div class="col-12 d-flex flex-row gap-3 justify-content-center mb-2">
-                <a class="link col-auto" href="#home">Home</a>
-                <a class="link col-auto" href="#learning-zone">Learning Zone</a>
-                <a class="link col-auto" href="#playground">Playground</a>
-            </div>
-            <div class="col-12 d-flex flex-row gap-3 justify-content-center">
-                <a class="link col-auto" href="#storytime">Storytime</a>
-                <a class="link col-auto" href="#discovery-corner">Discovery Corner</a>
-                <a class="link col-auto" href="#characters">Characters</a>
-            </div>
+    <!-- Links Section -->
+    <div class="links-section">
+        <div class="links">
+            <a class="link" href="#home">Home</a>
+            <a class="link" href="#learning-zone">Learning Zone</a>
+            <a class="link" href="#playground">Playground</a>
+            <a class="link" href="#storytime">Storytime</a>
+            <a class="link" href="#discovery-corner">Discovery Corner</a>
+            <a class="link" href="#characters">Characters</a>
         </div>
     </div>
 
-    <div class="subscribe-section col-auto d-flex flex-column align-items-center">
+    <!-- Social Section -->
+    <div class="subscribe-section">
         <h3 class="section-title">Follow Us</h3>
-        <div class="social-media d-flex flex-column gap-2">
-            <a class="social-link" href="https://instagram.com" target="_blank" rel="noopener" title="Instagram">
+        <div class="social-media">
+            <a class="social-link" href="https://instagram.com" target="_blank" title="Instagram">
                 <i class="bi bi-instagram"></i>
             </a>
-            <a class="social-link" href="https://facebook.com" target="_blank" rel="noopener" title="Facebook">
+            <a class="social-link" href="https://facebook.com" target="_blank" title="Facebook">
                 <i class="bi bi-facebook"></i>
             </a>
-            <a class="social-link" href="https://youtube.com" target="_blank" rel="noopener" title="YouTube">
+            <a class="social-link" href="https://youtube.com" target="_blank" title="YouTube">
                 <i class="bi bi-youtube"></i>
             </a>
         </div>
