--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <div style="position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; z-index: -2; pointer-events: none;">
-  <app-background></app-background>
+    <app-background></app-background>
 </div>
 <div style="position: relative; z-index: 10;">
     <div class="animate__animated animate__fadeInDown">
@@ -28,7 +28,8 @@
     <br>
     <br>
     <div class="component-animation footer" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
-        <app-home-footer></app-home-footer>
+      <app-home-footer [color]="'#6486FF'"></app-home-footer>
+
     </div>
 </div>
 <app-stars-background></app-stars-background>
