--- a/src/app/components/pages/stories/stories.component.html
+++ b/src/app/components/pages/stories/stories.component.html
@@ -1,1 +1,2 @@
-<p>stories works!</p>
+    <app-background></app-background>
+    <div class="background"><img src="images/shopping/background.png" alt="background"></div>
