--- a/src/app/components/background/background.component.css
+++ b/src/app/components/background/background.component.css
@@ -1,19 +1,86 @@
+
+:host{
+  --pink: rgba(255, 0, 110, 1);;
+  --blue: rgba(100, 134, 255, 1);
+  --orane: rgba(251, 86, 100, 1);
+  --purble: rgba(155, 87, 250, 1);
+  --yellow: rgba(255, 238, 82, 1);
+}
+
 .home-container{
   z-index: -1;
-  background-color: rgba(255, 255, 255, 0.185);
-  backdrop-filter: blur(50px);
+  background-color: rgba(255, 255, 255, 0.274);
+  backdrop-filter: blur(0px);
   width: 100%;
   height: 100%;
 }
 
-
-
 .circle {
-  width: 300px;
-  height: 300px;
+  width:30%;
+  height:60%;
   top: 540px;
   z-index: -200;
   border-radius: 100%;
   position: absolute;
   transition: all 2s;
+}
+
+.circle:nth-of-type(1) {
+  top: 18px;
+  left: 2px;
+  background-color: var(--blue);
+}
+
+.circle:nth-of-type(2) {
+  top: 540px;
+  left: 140px;
+  background-color: var(--orane);
+}
+
+.circle:nth-of-type(3) {
+  top: 205px;
+  left: 564px;
+  background-color: var(--purble);
+}
+
+.circle:nth-of-type(4) {
+  top: 450px;
+  right: 0px;
+  background-color: var(--pink);
+}
+
+.circle:nth-of-type(5) {
+  top: -138px;
+  right: 60px;
+  background-color: var(--yellow);
+}
+
+.circle:nth-of-type(6) {
+  top: 920px;
+  right: 560px;
+  background-color: var(--blue);
+}
+
+.circle:nth-of-type(7) {
+  top: 1330px;
+  left: 1004px;
+  background-color: var(--yellow);
+}
+
+.circle:nth-of-type(8) {
+  top: 1500px;
+  left: 0;
+  background-color: var(--blue);
+}
+
+.circle:nth-of-type(9) {
+  top: 1680px;
+  left: 564px;
+  background-color: var(--purble);
+}
+
+.circle:nth-of-type(10) {
+  top: 2015px;
+  left: 140px;
+  background-color: var(--orane);
 }
