--- a/src/app/components/pages/shop/shop.component.html
+++ b/src/app/components/pages/shop/shop.component.html
@@ -1,39 +1,61 @@
 <div style="position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; z-index: -2; pointer-events: none;">
-    <app-background></app-background>
+  <app-background></app-background>
 </div>
 <div class="backgrounds">
-    <div class="background"><img src="images/shopping/background.png" alt="background"></div>
-    <!-- <div class="background"><img src="images/shopping/background.png" alt="background"></div> -->
+  <div class="background"><img src="images/shopping/background.png" alt="background"></div>
 </div>
 
 <div class="content">
+  <!-- ✅ Loading Spinner -->
+  <div *ngIf="loading" class="loading-overlay">
+    <div class="loading-box">
+      <div class="spinner"></div>
+      <p>Loading products...</p>
+    </div>
+  </div>
+
+
+  <!-- ✅ Actual Content -->
+  <ng-container *ngIf="!loading">
     <div class="title">
-        <img class="title-background img-fluid" src="images/shopping/titleBackground.png" alt="title">
-        <img class="title-collectionBackground img-fluid" src="images/shopping/titleBackgroundCollection.png"
-            alt="title">
-        <div class="title-main row">
-
-            <img class="title-character img-fluid col-4" src="images/shopping/mainCharacter.png" alt="title">
-            <div class="title-sentince col-8">
-                <h1>Buy <span>Patarif</span> products to<br>be part of our family</h1>
-                <p>Many great products are waiting for you</p>
-
-            </div>
+      <img class="title-background img-fluid" src="images/shopping/titleBackground.png" alt="title">
+      <img class="title-collectionBackground img-fluid" src="images/shopping/titleBackgroundCollection.png" alt="title">
+      <div class="title-main row">
+        <img class="title-character img-fluid col-4" src="images/shopping/mainCharacter.png" alt="title">
+        <div class="title-sentince col-8">
+          <h1>Buy <span>Patarif</span> products to<br>be part of our family</h1>
+          <p>Many great products are waiting for you</p>
         </div>
+      </div>
     </div>
-    <!-- <div class="background" style="position: relative;"><img src="images/shopping/background.png" alt="background"></div> -->
-    <div *ngFor="let category of categories; let i = index" class="products">
-        <h1 class="title">{{ category.name }}</h1>
+    <div class="products" *ngFor="let category of categories; let i = index">
+      <div class="" *ngIf="productsByCategory[category].length > 0">
+        <h1 class="title">
+          We have many beautiful <span>{{ category | titlecase }}</span>
+        </h1>
+
         <div class="cards-wrapper">
-            <button class="scroll-btn left" (click)="scrollCards('left', i)">
-                <i class="bi bi-arrow-left-short"></i>
-            </button>
-            <div class="cards" #cardsContainer>
-                <app-product-card *ngFor="let p of category.products" [product]="p"></app-product-card>
+          <button class="scroll-btn left" (click)="scrollCards('left', i)">
+            <i class="bi bi-arrow-left-short"></i>
+          </button>
+
+          <div class="cards" #cardsContainer>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3" *ngFor="let product of productsByCategory[category]">
+              <div (click)="navigateToProduct(product.id)" class="product-card">
+                <app-product-card [title]="product.title" [img]="product.images[0]" [price]="product.final_price"
+                  [rate]="product.rate">
+                </app-product-card>
+              </div>
+
             </div>
-            <button class="scroll-btn right" (click)="scrollCards('right', i)">
-                <i class="bi bi-arrow-right-short"></i>
-            </button>
+          </div>
+
+          <button class="scroll-btn right" (click)="scrollCards('right', i)">
+            <i class="bi bi-arrow-right-short"></i>
+          </button>
         </div>
+      </div>
     </div>
-</div>ه
+
+  </ng-container>
+</div>
