--- a/src/app/components/background/background.component.html
+++ b/src/app/components/background/background.component.html
@@ -1,4 +1,4 @@
-<div class="w-100 h-100" style="height: 100vh; z-index: 0; pointer-events: none;">
+<div class="super">
   <!-- circles -->
   <div class="circle"></div>
   <div class="circle"></div>
