--- a/src/app/components/pages/home/characters-home/slider-characters-home/slider-characters-home.component.html
+++ b/src/app/components/pages/home/characters-home/slider-characters-home/slider-characters-home.component.html
@@ -21,9 +21,9 @@
   </div>
 
   <div class="scroll d-flex justify-content-center align-items-center gap-3">
-    <button class="arrow" style="background-color: #E3E3E3;" (click)="prevSlide()">
+    <!-- <button class="arrow" style="background-color: #E3E3E3;" (click)="prevSlide()">
       <i class="bi bi-arrow-left"></i>
-    </button>
+    </button> -->
     <div class="dots">
       <span
         *ngFor="let card of characters; let i = index"
