--- a/src/app/components/pages/home/hero-section/hero-section.component.html
+++ b/src/app/components/pages/home/hero-section/hero-section.component.html
@@ -19,6 +19,8 @@
             </span><br>
             <span class="line3">for kids</span>
         </h1>
+        <img class="img-fluid learn-line" src="images/learnLine.png" alt="line">
+        <img class="img-fluid play-line" src="images/playLine.png" alt="line">
     </div>
     <!-- Right side -->
     <div class="col-12 col-md-4 text-center text-md-end mt-4">
@@ -26,45 +28,45 @@
     </div>
 
 
+    
+        <div class="paper-plane"><img src="images/paperPlane.png" alt=""></div>
+        <div class="wand"><img class="img-fluid" src="images/wand.png" alt="wand"></div>
+        <div class="lets-play"><img class="img-fluid" src="images/letsPlay.png" alt="lets-play"></div>
+    
+        <div class="collection">
+            <div class="collection-item enjoy" style="  transform: rotate(20deg); background-color: rgba(255, 0, 110, 1);">
+                Enjoy
+            </div>
+            <div class="collection-item book"
+                style="background-color: rgba(100, 134, 255, 1); padding: 10px; position: absolute; top: -20px; left: 140px;">
+                <img src="images/book.png" alt="book">
+            </div>
+    
+            <div class="collection-item stories"
+                style="transform: rotate(-20deg); background-color: rgba(155, 87, 250, 1); position: absolute; top: 40px; left: 100px;">
+                Stories
+            </div>
+    
+            <div class="collection-item love"
+                style="background-color: rgba(251, 86, 100, 1); padding: 10px; position: absolute; top: 60px; left: 40px;">
+                <img src="images/love.png" alt="favourite">
+            </div>
+            <div class="collection-item learning"
+                style="transform: rotate(20deg); background-color: rgba(100, 134, 255, 1); position: absolute; top: 100px; left: -40px">
+                Learning
+            </div>
+            <div class="collection-item star"
+                style="background-color: rgba(255, 238, 82, 1); padding: 10px; position: absolute; top: 90px; left: 160px;">
+                <img src="images/star.png" alt="favourite">
+            </div>
+            <div class="collection-item game"
+                style="background-color: rgba(155, 87, 250, 1); padding: 10px; position: absolute; top: 160px; left: 90px;">
+                <img src="images/game.png" alt="favourite">
+            </div>
+            <div class="collection-item play"
+                style="transform: rotate(-20deg); background-color: rgba(251, 86, 100, 1); position: absolute; top: 150px; left: 150px">
+                Play
+            </div>
+        </div>
 </div>
 
-
-<!-- <div class="paper-plane"><img src="images/paperPlane.png" alt=""></div> -->
-
-<div class="lets-play"><img class="img-fluid" src="images/letsPlay.png" alt="lets-play"></div>
-
-<div class="collection">
-    <div class="collection-item enjoy" style="  transform: rotate(20deg); background-color: rgba(255, 0, 110, 1);">
-        Enjoy
-    </div>
-    <div class="collection-item book"
-        style="background-color: rgba(100, 134, 255, 1); padding: 10px; position: absolute; top: -20px; left: 140px;">
-        <img src="images/book.png" alt="book">
-    </div>
-
-    <div class="collection-item stories"
-        style="transform: rotate(-20deg); background-color: rgba(155, 87, 250, 1); position: absolute; top: 40px; left: 100px;">
-        Stories
-    </div>
-
-    <div class="collection-item love"
-        style="background-color: rgba(251, 86, 100, 1); padding: 10px; position: absolute; top: 60px; left: 40px;">
-        <img src="images/love.png" alt="favourite">
-    </div>
-    <div class="collection-item learning"
-        style="transform: rotate(20deg); background-color: rgba(100, 134, 255, 1); position: absolute; top: 100px; left: -40px">
-        Learning
-    </div>
-    <div class="collection-item star"
-        style="background-color: rgba(255, 238, 82, 1); padding: 10px; position: absolute; top: 90px; left: 160px;">
-        <img src="images/star.png" alt="favourite">
-    </div>
-    <div class="collection-item game"
-        style="background-color: rgba(155, 87, 250, 1); padding: 10px; position: absolute; top: 160px; left: 90px;">
-        <img src="images/game.png" alt="favourite">
-    </div>
-    <div class="collection-item play"
-        style="transform: rotate(-20deg); background-color: rgba(251, 86, 100, 1); position: absolute; top: 150px; left: 150px">
-        Play
-    </div>
-</div>
