--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -1,4 +1,5 @@
-<div style="position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; z-index: -2; pointer-events: none;">
+<div class="background">
+    <app-background></app-background>
     <app-background></app-background>
 </div>
 <div style="position: relative; z-index: 10;">
@@ -32,4 +33,4 @@
 
     </div>
 </div>
-<app-stars-background></app-stars-background>
+<!-- <app-stars-background></app-stars-background> -->
