--- a/src/app/components/pages/learning/learning.component.css
+++ b/src/app/components/pages/learning/learning.component.css
@@ -24,12 +24,13 @@ body {
 }
 
 .main {
-  height: 680px;
+  /* margin: 0 10%; */
   position: absolute;
-  top: 100px;
-  left: 60px;
-  right: 60px;
-  bottom: 60px;
+  height: 80vh;
+  width: 80vw;
+  transform: translate(-50%, -50%);
+  left: 50%;
+  top: 55%;
   z-index: 10;
   background-color: rgb(255, 210, 126);
   border-radius: 24px;
