--- a/src/app/components/pages/shop/product-card/product-card.component.css
+++ b/src/app/components/pages/shop/product-card/product-card.component.css
@@ -2,7 +2,32 @@
 /* products */
 
 
-.products .title {
+
+ .product-card {
+    display: flex;
+    flex-direction: column;
+    /* align-items: sta; */
+    background: #ffffff8c;
+    border-radius: 12px;
+    padding: 16px 18px;
+    width: 240px;
+    height: 360px;
+    /* margin: 0 12px; */
+    /* min-height: auto; */
+    gap: 8px;
+    transform: translateY(0);
+    transition: background 0.2s, transform 0.2s;
+    cursor: normal;
+}
+.card-img{
+    width:100%;
+    height: 100%;
+    /* border: rgb(0, 90, 192) 1px solid; */
+    border-radius: 8px;
+    overflow: hidden;
+}
+
+ .title {
     font-family: var(--mainFont);
     font-weight: 900;
     font-size: clamp(0.7rem, 3vw, 3rem);
@@ -11,40 +36,23 @@
     text-align: left;
     margin-bottom: 16px;
 }
-
-.products .product-card {
-    display: flex;
-    flex-direction: column;
-    /* align-items: sta; */
-    background: #ffffff8c;
-    border-radius: 12px;
-    padding: 16px 18px;
-    width: 240px;
-    height: auto;
-    margin: 0 12px;
-    min-height: auto;
-    gap: 8px;
-    transform: translateY(0);
-    transition: background 0.2s, transform 0.2s;
-    cursor: pointer;
-}
 p, h2, button{
     margin: 0;
 }
-.products .product-card:hover {
+ .product-card:hover {
     background: #fff;
     transform: translateY(-5px);
 }
 
-.products .product-card img {
+ .product-card img {
     width: 100%;
-    height: auto;
-    object-fit: contain;
-    border-radius: 8px;
+    /* height: auto; */
+    object-fit: cover;
+    /* border-radius: 8px; */
     /* margin-bottom: 8px; */
 }
 
-.products .product-title {
+ .product-title {
     font-family: var(--comic);
     font-size: clamp(0.7rem, 1.5vw, 1.5rem);
     font-weight: 900;
@@ -53,7 +61,7 @@ p, h2, button{
     text-align: left;
 }
 
-.products .product-rating {
+ .product-rating {
     display: flex;
     align-items: center;
     gap: 6px;
@@ -61,14 +69,15 @@ p, h2, button{
     color: #E8B931;
 }
 
-.products .product-price {
+ .product-price {
     font-family: var(--mainFont);
     font-size: clamp(0.7rem, 2vw, 2rem);
     font-weight: 900;
     color: #000;
 }
 
-.products .add-to-cart {
+ .add-to-cart {
+    visibility: hidden;
     margin-top: auto;
     padding: 8px 18px;
     font-size: clamp(0.7rem, 1vw, 1rem);
@@ -83,7 +92,7 @@ p, h2, button{
     cursor: pointer;
 }
 
-.products .add-to-cart:hover {
+ .add-to-cart:hover {
     background: #FF006E;
     color: #fff;
     border: transparent 1px solid;
