products and enhance in many things

--- a/src/app/components/account/login/login.component.html
+++ b/src/app/components/account/login/login.component.html
@@ -1,5 +1,5 @@
 <!-- login.component.html -->
-<img class="logo" src="images/logo-patarif.png" alt="logo" width="100">
+<!-- <img class="logo" src="images/logo-patarif.png" alt="logo" width="100"> -->
 <div class="container">
   <div class="gradient-border-wrapper w-100">
     <div class="row shadow-lg  overflow-hidden w-100">
