--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,11 +1,10 @@
-<nav class="navbar navbar-expand-lg custom-navbar px-5 py-2">
+<nav class="navbar navbar-expand-lg custom-navbar px-3 py-2">
   <div class="container-fluid">
     <!-- Logo -->
-    <a class="navbar-brand d-flex align-items-center" href="#">
-      <img src="images/logo-patarif.png" alt="Logo" class="logo-img w-50" />
+    <a class="navbar-brand d-flex align-items-center" href="">
+      <img src="images/logo-patarif.png" alt="Logo" class="logo-img img-fluid" />
     </a>
 
-    <!-- زر التوجّل (الهامبورجر) -->
     <!--   <button
       class="navbar-toggler"
       type="button"
