--- a/src/app/components/pages/home/introduction/introduction.component.html
+++ b/src/app/components/pages/home/introduction/introduction.component.html
@@ -1,3 +1,6 @@
+<!-- <app-lines-background></app-lines-background> -->
+<app-stars-background></app-stars-background>
+
 <div class="introduction animate__animated animate__fadeInDown row">
     <div class=" intro-image-1 p-4 rounded-5 bg-primary col-md-4"><img class="img-fluid h-100 w-100 object-fit-cover"
             src="images/introduction.png" alt=""></div>
