--- a/src/app/components/pages/learning/learning.component.html
+++ b/src/app/components/pages/learning/learning.component.html
@@ -1,6 +1,6 @@
 <app-background></app-background>
-<div class="background"><img src="images/learningZone/background.png" alt="background"></div>
-<div class="background"><img src="images/learningZone/StarsBackground.png" alt="background"></div>
+<app-lines-background></app-lines-background>
+<app-stars-background></app-stars-background>
 
 <div class="main">
     <a class="item" [routerLink]="['/tomate-story']">
