--- a/src/app/components/lines-background/lines-background.component.html
+++ b/src/app/components/lines-background/lines-background.component.html
@@ -1,3 +1,3 @@
 <div class="home-container" style="inset:0;" [style.top.vh]="top">
-  <img src="images/Stars.png" alt="">
+  <img src="images/background-lines.png" alt="">
 </div>
