--- a/src/app/components/pages/home/categories/categories.component.css
+++ b/src/app/components/pages/home/categories/categories.component.css
@@ -13,7 +13,8 @@
 .cards {
     padding: 10px;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); /* توزيع الأعمدة تلقائيًا */
-    gap: 1rem; /* مسافة بين العناصر */
-    padding: 1rem; /* حواف داخلية */
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); 
+    gap: 1rem; 
+    padding: 1rem; 
 }
+
