--- a/src/app/components/pages/home/categories/categories.component.html
+++ b/src/app/components/pages/home/categories/categories.component.html
@@ -1,8 +1,10 @@
+<app-stars-background></app-stars-background>
+
 <h1 class="categories-title">What do we have?</h1>
 
 <!-- <app-background></app-background> -->
 
-<div class="cards justify-content-between" style="margin: 0 20px;">
+<div class="cards justify-content-between" >
   <!-- // Category Card for Learning Corner -->
   <div class="col-auto"> <app-category-card [bgColor]="'#FF006E'" [bgIcon]="'images/learningCorenetCategory.png'"
       [mainIcon]="'images/mainlearningCorenetCategory.png'" [title]="'Learning\nCorner'"
