--- a/src/app/components/pages/home/characters-home/slider-characters-home/slider-characters-home.component.css
+++ b/src/app/components/pages/home/characters-home/slider-characters-home/slider-characters-home.component.css
@@ -1,14 +1,14 @@
 /* ===== Carousel Styles ===== */
 .games-carousel-container {
-  width: 100vw;
-  max-width: 100vw;
+  width: 100%;
+  /* max-width: 100%; */
   margin: 0;
   text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-
+  
 }
 
 .carousel {
