--- a/src/app/components/pages/home/hero-section/hero-section.component.css
+++ b/src/app/components/pages/home/hero-section/hero-section.component.css
@@ -7,6 +7,7 @@ body {
     padding: 20px 20px 60px 60px;
     animation: fadeInFromTop 1s ease-out;
     position: relative;
+    width: 100vw;
 }
 
 .paper-plane {
