--- a/src/app/components/pages/home/home-footer/home-footer.component.html
+++ b/src/app/components/pages/home/home-footer/home-footer.component.html
@@ -1,20 +1,21 @@
-<div class="footer-home">
+<div class="footer-home" [style.background-color]="color">
     <!-- Logo Section -->
     <div class="logo-section">
-        <a class="logo" href="#top" title="Go to main page">
+        <a routerLink="/home" class="logo" title="Go to main page">
             <img src="images/logo-patarif.png" alt="logo">
         </a>
+        <p>&#169;Patarif Copyright - 2022 – All rights reserved</p>
     </div>
 
     <!-- Links Section -->
     <div class="links-section">
         <div class="links">
-            <a class="link" href="#home">Home</a>
-            <a class="link" href="#learning-zone">Learning Zone</a>
-            <a class="link" href="#playground">Playground</a>
-            <a class="link" href="#storytime">Storytime</a>
-            <a class="link" href="#discovery-corner">Discovery Corner</a>
-            <a class="link" href="#characters">Characters</a>
+            <a class="link" routerLink="/home">Home</a>
+            <a class="link" routerLink="/learning">Learning Zone</a>
+            <a class="link" routerLink="/games">Playground</a>
+            <!-- <a class="link" routerLink="/games">Storytime</a> -->
+            <!-- <a class="link" routerLink="/home">Discovery Corner</a> -->
+            <a class="link" routerLink="/shop" title="hello">shop</a>
         </div>
     </div>
 
@@ -22,13 +23,13 @@
     <div class="subscribe-section">
         <h3 class="section-title">Follow Us</h3>
         <div class="social-media">
-            <a class="social-link" href="https://instagram.com" target="_blank" title="Instagram">
+            <a class="social-link" href="https://www.instagram.com/patarif/" target="_blank" title="Instagram">
                 <i class="bi bi-instagram"></i>
             </a>
-            <a class="social-link" href="https://facebook.com" target="_blank" title="Facebook">
+            <a class="social-link" href="https://www.facebook.com/Patarif" target="_blank" title="Facebook">
                 <i class="bi bi-facebook"></i>
             </a>
-            <a class="social-link" href="https://youtube.com" target="_blank" title="YouTube">
+            <a class="social-link" href="https://www.youtube.com/@patarif" target="_blank" title="YouTube">
                 <i class="bi bi-youtube"></i>
             </a>
         </div>
