--- a/src/app/components/pages/home/home-games/slider-games-home-page/slider-games-home-page.component.css
+++ b/src/app/components/pages/home/home-games/slider-games-home-page/slider-games-home-page.component.css
@@ -1,13 +1,14 @@
 /* ===== Carousel Styles ===== */
 .games-carousel-container {
-  width: 100vw;
-  max-width: 100vw;
+  width: 100%;
+  /* max-width: 100vw; */
   margin: 1px 0 0 0;
   text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
+  /* overflow-x: hidden; */
 }
 
 .carousel {
