--- a/src/app/components/pages/home/home.component.css
+++ b/src/app/components/pages/home/home.component.css
@@ -8,7 +8,9 @@ body {
     justify-content: center;
     align-items: center;
 } */
-
+/* *{
+    border:  green 1px solid;
+} */
 /* Component animation styles */
 .component-animation {
     opacity: 0;
