--- a/src/app/components/pages/home/introduction/introduction.component.css
+++ b/src/app/components/pages/home/introduction/introduction.component.css
@@ -7,6 +7,7 @@
     gap: 4%;
     padding-left: 4%;
     padding-right: 4%;
+    width: 100vw;
 }
 body{
     overflow: hidden;
@@ -19,3 +20,4 @@ body{
     font-family: "Architects Daughter", cursive;
     font-size: clamp(0.5rem, 1.5vw, 1.3rem);
 }
+
