--- a/src/app/components/pages/learning/learning.component.css
+++ b/src/app/components/pages/learning/learning.component.css
@@ -27,7 +27,7 @@ body {
   /* margin: 0 10%; */
   position: absolute;
   height: 80vh;
-  width: 80vw;
+  width: 90vw;
   transform: translate(-50%, -50%);
   left: 50%;
   top: 55%;
@@ -131,7 +131,7 @@ body {
   position: absolute;
   bottom: 100px;
   font-family: "Baloo 2", sans-serif;
-  font-size: 2rem;
+    font-size: clamp(0.7rem, 2vw, 2rem);
   font-weight: 700;
   text-align: center;
   z-index: 1;
