--- a/src/app/components/pages/shop/cart/cart.component.html
+++ b/src/app/components/pages/shop/cart/cart.component.html
@@ -1,4 +1,5 @@
 <app-background></app-background>
+<app-stars-background></app-stars-background>
 
 <div class="main">
     <div class="pageTitle">
@@ -21,41 +22,70 @@
         </thead>
         <tbody>
             <tr *ngFor="let item of cart">
-                <td class="product">
-                    <div class="product-img"> <img [src]="item.image"></div>
-
+                <td class="product" data-label="product">
+                    <div class="product-img"><img [src]="item.image"></div>
                     {{ item.name }}
                 </td>
-                <td>{{ item.size }}</td>
-                <td>{{ item.price }}$</td>
-                <td>
+                <td data-label="size">{{ item.size }}</td>
+                <td data-label="price">{{ item.price }}$</td>
+                <td data-label="color">
                     <div [style.background]="item.color"
                         style="width: 25px; height: 25px; border-radius: 50%; border:1px solid #ccc;">
                     </div>
                 </td>
-                <td class="">
-                    <div class="quantity"><button (click)="decreaseQuantity(item)"><i
-                                class="bi bi-dash-square"></i></button> {{item.quantity}} <button
-                            (click)="increaseQuantity(item)"><i class="bi bi-plus-square-fill"></i></button></div>
+                <td data-label="quantity">
+                    <div class="quantity">
+                        <button (click)="decreaseQuantity(item)"><i class="bi bi-dash-square"></i></button>
+                        {{item.quantity}}
+                        <button (click)="increaseQuantity(item)"><i class="bi bi-plus-square-fill"></i></button>
+                    </div>
                 </td>
-                <td>{{ getSubtotal(item) }}$</td>
-                <td class="remove"><button (click)="removeItem(item)"><i class="bi bi-trash3"></i></button></td>
+                <td data-label="subtotal">{{ getSubtotal(item) }}$</td>
+                <td data-label="remove" class="remove">
+                    <button (click)="removeItem(item)"><i class="bi bi-trash3"></i></button>
+                </td>
+
             </tr>
         </tbody>
     </table>
-<div class="section2">
-     <div class="invoice">
-        <div class="discount-code">
-            <form action="">
+    <div class="section2">
+        <div class="invoice">
+            <div class="discount-code">
+                <form action="">
 
-                <input type="text" placeholder="discount code">
-                <button type="submit">applay</button>
-            </form>
-        </div>
-        <div class="checkout">
-            fa;lsdkjfa;dslkfja;sdlfkja;sdlfkjasd;lkfjas;dlfkjad;kfjad;slkfj
+                    <input type="text" placeholder="Discount Code">
+                    <button type="submit">applay</button>
+                </form>
+            </div>
+            <div class="checkout">
+                <p class="no-products" *ngIf="total == 0">select products first</p>
+                <div class="cart-details" *ngIf="total != 0">
+                    <div class="part">
+                        <p class="part-title">Subtotal</p>
+                        <p class="value">$274.59</p>
+                    </div>
+                    <div class="divider"></div>
+                    <div class="part">
+                        <p class="part-title">Shipping</p>
+                        <p class="value">Free</p>
+                    </div>
+                    <div class="divider"></div>
+                    <div class="part">
+                        <p class="part-title">Estimate for</p>
+                        <p class="value">United Kingdom</p>
+                    </div>
+                    <div class="divider"></div>
+                    <div class="part">
+                        <p class="part-title">Total</p>
+                        <p class="value">${{total}}</p>
+                    </div>
+                    <button class="checkout-button">Proceed To CheckOut</button>
+                </div>
+            </div>
+
         </div>
     </div>
+
 </div>
-   
-</div>
+<div class="before-footer"></div>
+<app-home-footer></app-home-footer>
